# bmstu-oop

./: .gitignore  README.md
lab_01/: CMakeLists.txt
lab_01/data/: 1.txt  cube.txt  obj_to_txt.py  rest.txt
lab_01/src/: constants.hpp  errors.cpp  errors.hpp  load.cpp  load.hpp  main.cpp  main_window.cpp  main_window.h  main_window.ui  model.cpp  model.hpp  render.cpp  render.hpp  request.cpp  request.hpp  utils.cpp  utils.hpp
lab_01/src/model/: edges.cpp  edges.hpp  load.cpp  model.cpp  model.hpp  model_actions.hpp  point.cpp  point.hpp  points.cpp  points.hpp
lab_01/src/render/: render.cpp  render.hpp  render_model_qt6.cpp  render_model_qt6.hpp
lab_02/: CMakeLists.txt  constants.hpp  main.cpp  readme.md
lab_02/container/: base_container.cpp  base_container.h  base_container.hpp  vector.h  vector.hpp  vector_concepts.hpp
lab_02/exceptions/: base_exceptions.h  iterator_exceptions.h  vector_exceptions.h
lab_02/iterator/: base_iterator.h  base_iterator.hpp  vector_const_iterator.h  vector_const_iterator.hpp  vector_iterator.h  vector_iterator.hpp
lab_02/reverse_iterator/: base_reverse_iterator.h  base_reverse_iterator.hpp  vector_const_reverse_iterator.h  vector_const_reverse_iterator.hpp  vector_reverse_iterator.h  vector_reverse_iterator.hpp
lab_02/src/: errors.cpp  errors.hpp  main.cpp  test.hpp  vector.hpp
lab_02/tests/: test_2.cpp  test_additional_functions.cpp  test_base.hpp  test_constructor.cpp  test_creation.cpp  test_iterator.cpp  test_methods.cpp  test_operators.cpp  test_ranges.cpp  test_test.cpp  test_vector_math_methods.cpp
lab_02_hash/: BaseHashTable.h  BaseIterator.h  CMakeLists.txt  ConstHashIterator.h  ConstHashIterator.hpp  Errors.h  HashChain.h  HashChain.hpp  HashElem.h  HashElem.hpp  HashIterator.h  HashIterator.hpp  HashTable.h  HashTable.hpp  base_hash_table.h  hash_node.h  hash_node.hpp  lab2_hash.pro  main.cpp  readme.md
lab_02_hash/concepts/: concepts.h
lab_02_hash/exceptions/: base_exception.h  base_exceptions.h  errors.h  hash_chain_exceptions.h  hash_map_exceptions.h  hash_table_exceptions.h  iterator_exceptions.h
lab_02_hash/hash_map/: HashChain.h  HashChain.hpp  HashTable.h  HashTable.hpp  base_hash_map.cpp  base_hash_map.h  base_hash_table.h  hash_chain.h  hash_chain.hpp  hash_map.h  hash_map.hpp  hash_node.h
lab_02_hash/iterator/: BaseIterator.h  ConstHashIterator.h  ConstHashIterator.hpp  HashIterator.h  HashIterator.hpp
lab_03/: Makefile  compile_commands.json  interface.ui  lab_03.pro  moc_main_window.cpp  moc_mainwindow.cpp  moc_predefs.h  pch.hxx  readme.md  ui_interface.h  ultimate_patterns_guide.md
lab_03/data/: ar_15.txt  cube.sqlite  postgres_config copy.txt  postgres_config.txt  raketa.txt
lab_03/src/: main.cpp  main_window.cpp  main_window.hpp  mainwindow.cpp  mainwindow.hpp
lab_03/src/builder/: BaseBoneModelBuilder.cpp  BaseBoneModelBuilder.h  ListBoneModelBuilder.cpp  ListBoneModelBuilder.h  MatrixBoneModelBuilder.cpp  MatrixBoneModelBuilder.h
lab_03/src/command/: BaseCommand.cpp  BaseCommand.h  CommandManager.cpp  CommandManager.h
lab_03/src/concepts/: concept.h
lab_03/src/database/: AbstractDatabaseFactory.h  DatabaseConnection.h  DatabaseFactoryCreator.cpp  DatabaseFactoryCreator.h  PostgresqlConnection.cpp  PostgresqlConnection.h  PostgresqlFactory.cpp  PostgresqlFactory.h  SqliteConnection.cpp  SqliteConnection.h  SqliteFactory.cpp  SqliteFactory.h
lab_03/src/director/: BaseBoneModelDirector.cpp  BaseBoneModelDirector.h  BaseDirector.cpp  BaseDirector.h  BaseDirectorCreator.h  DirectorCreator.h  DirectorCreator.hpp  DirectorSolution.cpp  DirectorSolution.h  ListBoneModelDirector.cpp  ListBoneModelDirector.h  MatrixBoneModelDirector.cpp  MatrixBoneModelDirector.h
lab_03/src/drawer/: BaseDrawer.h  BaseDrawerCreator.cpp  BaseDrawerCreator.h  QtDrawer.cpp  QtDrawer.h  QtDrawerCreator.cpp  QtDrawerCreator.h
lab_03/src/exception/: baseexception.cpp  baseexception.h  databaseexception.h  directorexception.h  managerexception.h  matrixexception.h  modelexception.h  solutionexception.h  sqlitereaderexception.h  txtreaderexception.h
lab_03/src/facade/: SceneFacade.cpp  SceneFacade.h
lab_03/src/history/: CareTaker.cpp  CareTaker.h  Memento.cpp  Memento.h
lab_03/src/manager/: DrawManager.cpp  DrawManager.h  Drawmanager.hpp  LoadManager.cpp  LoadManager.h  SceneManager.cpp  SceneManager.h  TransformManager.cpp  TransformManager.h
lab_03/src/objects/: BaseModel.h  BoneModel.cpp  BoneModel.h  Camera.cpp  Camera.h  Composite.cpp  Composite.h  Edge.cpp  Edge.h  FaceBuilder.cpp  FaceBuilder.h  InvisibleObject.cpp  InvisibleObject.h  ListModelStructure.cpp  ListModelStructure.h  MatrixModelStructure.cpp  MatrixModelStructure.h  ModelStructure.h  Object.cpp  Object.h  Point.cpp  Point.h  Vector3.h  VisibleObject.h
lab_03/src/reader/: BaseReader.cpp  BaseReader.h  BaseReaderCreator.h  BoneModelReader.h  PostgresqlBoneModelReader.cpp  PostgresqlBoneModelReader.h  ReaderCreator.h  ReaderCreator.hpp  ReaderSolution.cpp  ReaderSolution.h  SqliteBoneModelReader.cpp  SqliteBoneModelReader.h  TxtBoneModelReader.cpp  TxtBoneModelReader.h
lab_03/uml/: lab_03.drawio
lab_03_1/: .interface.ui.swp  Task3.pro  interface.ui  run.sh
lab_03_1/data/: cube.txt  stul.txt
lab_03_1/scheme/: Scheme.drawio
lab_03_1/src/: main.cpp  mainwindow.hpp
lab_04/: CMakeLists.txt  config.h  constants.hpp  main.cpp  main_window.cpp  main_window.h  main_window.ui  readme.md
lab_04/buttons/: base_button.cpp  base_button.hpp  floor_button.cpp  floor_button.hpp  lift_button.cpp  lift_button.hpp
lab_04/cabin/: cabin.cpp  cabin.hpp
lab_04/controller/: controller.cpp  controller.hpp
lab_04/doors/: doors.cpp  doors.hpp
lab_04/elevator_system/: elevator_system.cpp  elevator_system.hpp
lab_04/lift/: lift.cpp  lift.hpp
lab_04/src/: constants.hpp  main_window.cpp  main_window.h
lab_05/: readme.md  ЛР5 Вафельница.drawio  лаба 5 вафельеница.drawio
patterns/: readme.md
patterns/04_abstract_factory/: CMakeLists.txt
patterns/11_facade/: readme.md
patterns/crtp/: CMakeLists.txt  main.cpp
(+106 files in other folders)
